--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,21 @@
-cmake_minimum_required(VERSION 3.30)
+cmake_minimum_required(VERSION 3.24)
 
-project("Hello World")
+project(hello_world)
 
-set (CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(hello hello.cpp)
+Include(FetchContent)
+
+FetchContent_Declare(
+  Catch2
+  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+  GIT_TAG        v3.8.1
+)
+
+FetchContent_MakeAvailable(Catch2)
+
+add_executable(hello_test tests/hello_test.cpp src/hello.cpp)
+add_executable(main main.cpp src/hello.cpp)
+
+target_link_libraries(hello_test PRIVATE Catch2::Catch2WithMain)
