test cases passed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,10 @@
 cmake_minimum_required(VERSION 3.24)
-
-project(hello_world)
+project(well-thats-just-prime)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-Include(FetchContent)
+include(FetchContent)
 
 FetchContent_Declare(
   Catch2
@@ -15,7 +14,10 @@ FetchContent_Declare(
 
 FetchContent_MakeAvailable(Catch2)
 
-add_executable(hello_test tests/hello_test.cpp src/hello.cpp)
-add_executable(main main.cpp src/hello.cpp)
+add_executable(factorizer_test tests/factorizer_test.cpp src/factorizer.cpp)
+target_include_directories(factorizer_test PRIVATE src)
 
-target_link_libraries(hello_test PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(factorizer_test PRIVATE Catch2::Catch2WithMain)
+
+enable_testing()
+add_test(NAME FactorizerTest COMMAND factorizer_test)
